commit submission on dev branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Local .terraform directories
+# Local .terraform directories and user files
 **/.terraform/*
+*user.tfvars
+
+# Backup 
+backup*
 
 # .tfstate files
 *.tfstate
